# tornare

./: .dockerignore  .gitignore  Cargo.toml  DEPLOY.md  Makefile  README.md  docker-compose.yml
backend/: .env.example  .gitignore  Cargo.toml  Dockerfile
backend/migrations/: 0001_initial_schema.sql  0002_add_event_format.sql  0002_users_username.sql  0003_event_public_registration.sql  0004_event_featured.sql  0005_event_matches_created_at.sql  0006_signup_request_multi_roles.sql  0007_player_role_prefs.sql  0008_team_member_assigned_role.sql  0009_normalize_legacy_flex_roles.sql  0010_event_ended_status.sql  0011_event_soft_delete.sql  0012_auth_identities_provider_username.sql  0014_event_player_user_link.sql  0015_event_status.sql  0016_event_status_default_draft.sql  0017_event_require_handles.sql  0018_discord_bot.sql  0019_discord_legacy_events.sql  0020_missing_created_at.sql  0021_discord_guilds.sql  0022_discord_guild_members.sql  0023_discord_guild_last_error.sql  0024_discord_guild_soft_delete.sql  0025_event_discord_announce.sql  0026_email_verification.sql  0027_password_reset_tokens.sql  0028_discord_mention_roles.sql
backend/sql/: admin_operations.sql
backend/src/: db.rs  errors.rs  handlers.rs  lib.rs  main.rs  models.rs  router.rs
backend/src/app/: mod.rs  router.rs  security.rs  state.rs
backend/src/features/: mod.rs  permissions.rs
backend/src/features/auth/: battlenet_handlers.rs  battlenet_service.rs  discord_handlers.rs  discord_service.rs  email.rs  handlers.rs  mod.rs  models.rs  repo.rs  service.rs
backend/src/features/discord/: handlers.rs  (+5 more)
backend/src/shared/: authorization.rs  crypto.rs  db.rs  errors.rs  mod.rs  models.rs  numeric.rs  serde_utils.rs  validation.rs
backend/tests/: battlenet.rs  discord.rs  e2e.rs  email.rs  events.rs  users.rs
backend/tests/common/: mod.rs
bot/: .env.example  Cargo.toml  Dockerfile
bot/src/: announcements.rs  commands.rs  discord.rs  lib.rs  main.rs
bot/tests/: announcements.rs
(+159 files in other folders)
