[package]
name = "tornare"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
axum = "0.8.8"
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "migrate", "time"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6", features = ["cors", "trace", "request-id"] }
uuid = { version = "1", features = ["serde", "v4"] }
argon2 = "0.5"
hex = "0.4"
jsonwebtoken = { version = "10", default-features = false, features = ["rust_crypto"] }
sha2 = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
rand = "0.9"
time = { version = "0.3", features = ["formatting", "parsing"] }

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1"
